Adicionando Kafka ao Projeto

--- a/BFFAPI/appsettings.json
+++ b/BFFAPI/appsettings.json
@@ -6,5 +6,11 @@
     }
   },
   "AllowedHosts": "*",
-  "JwtSecretKey": "ChaveBemSecretaMesmo"
+  "JwtSecretKey": "ChaveBemSecretaMesmo",
+
+  "KafkaSettings": {
+    "BootstrapServers": "localhost:9092",
+    "TopicCadastroClientes": "cadastro-clientes",
+    "TopicCadastroPagamento": "cadastro-pagamentos"
+  }
 }
